--- a/css/styles.css
+++ b/css/styles.css
@@ -602,6 +602,9 @@ transition: color 250ms linear;
 .contact-link:focus{
     color: #FD9222;
 }
+
+                               /*SUBSCRIBE FORM FOOTER*/
+
 .button-subscribe-footer{
     border-radius: 100px;
     background: #FD9222;
@@ -656,7 +659,7 @@ transition: color 250ms linear;
     align-items: center;
     justify-content: space-between;
 }
-                             /*SUBSCRIBE FORM FOOTER*/
+                             
 
 
 .input-form-footer{
@@ -676,3 +679,217 @@ letter-spacing: -0.02em;
     gap: 8px;
 }
 
+                               /*MODAL WINDOW*/
+
+
+ .form-content-box{
+ width: 517px;
+ min-height: 749px;
+ background: #FAFAFA;
+ border-radius: 15px;
+ padding: 40px;
+ }
+ 
+
+ .btn-close-form-review{
+    border: none;
+    background-color: #FAFAFA;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    
+ }
+ .icon-x-close{
+    stroke: #111;
+    stroke-width: 2px;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+ }                              
+
+.form-review-title{
+color: #111;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 1.16;
+    letter-spacing: -0.03em;
+    text-transform: uppercase;
+    width: 298px;
+    margin-bottom: 40px;
+  }
+.form-review-title-span{
+    color: #FD9222;
+}
+.label-form-review{
+    color: rgba(64, 64, 64, 0.30);
+font-size: 14px;
+font-weight: 400;
+letter-spacing: -0.02em;
+margin-bottom: 8px;
+display: block;
+}
+
+.input-form-review{
+   border-radius: 13px;
+border: 1px solid rgba(17, 17, 17, 0.05); 
+width: 100%;
+height: 68px;
+outline: transparent;
+background-color: transparent;
+transition: border 250ms linear;
+padding-left: 62px;
+}
+.input-form-review:hover,
+.input-form-review:focus{
+    border: 1px solid  #FD9222;
+}
+.input-form-review-box{
+ position: relative;
+}
+
+
+.icon-input-form{
+   stroke: rgba(64, 64, 64, 1);
+   fill: none;
+   position: absolute;
+   left: 24px;
+   top: 50%;
+   transform: translateY(-50%);
+   transition: stroke 250ms linear;
+}
+.input-form-review:hover + .icon-input-form{
+    stroke: #FD9222;
+}
+
+.textarea-field{
+    width: 100%;
+    resize: none;
+    height: 137px;
+    border-radius: 13px;
+    border: 1px solid rgba(17, 17, 17, 0.05);
+    padding: 22px 24px;
+    outline: transparent;
+    background-color: transparent;
+    transition: border-color 250ms linear;
+}
+.textarea-field::placeholder{
+    color: rgba(64, 64, 64, 0.30);
+    font-size: 18px;
+    font-weight: 400;
+    letter-spacing: -0.02em;
+}
+.textarea-field:hover,
+.textarea-field:focus{
+    border-color: #FD9222;
+}
+.button-form-review{
+    border-radius: 100px;
+    background-color: #FD9222;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #FFF;
+    border: none;
+    height: 45px;
+    min-width: 117px;
+    font-size: 14px;
+    font-weight: 600;
+    transition: background-color 250ms linear, color 250ms linear, border 250ms linear; 
+}
+
+ 
+.button-form-review:hover,
+.button-form-review:focus{
+    background-color: #fff;
+    border: 1px solid #FD9222;
+    color: #FD9222;
+}
+
+ 
+.label-input-box{
+    margin-bottom: 18px;
+}
+.form-div-checkbox{
+    margin-bottom: 40px;
+}
+.form-span-checkbox{
+    width: 20px;
+    height: 20px;
+    border-radius: 6px;
+    border: 1px solid rgba(17, 17, 17, 0.14);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
+    margin-right: 12px;
+    transition: background-color 250ms linear, border 250ms linear, fill 250ms linear;
+}
+.input-form-checkbox:checked + .form-label-checkbox>span{
+    background-color: #fd9222;
+    fill: #fff;
+    border: none;
+}
+.form-label-checkbox{
+    color: rgba(64, 64, 64, 0.60);
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing: -0.02em;
+}
+.link-user-privacy{
+    text-decoration: underline;
+    color: #FD9222;
+}
+
+.form-review-title-btn-close-box{
+    position: relative;
+}
+.btn-close-form-review{
+    position: absolute;
+    top: -17px;
+    right: -17px;
+}
+.form-review-wrapper{
+    border-radius: 15px;
+    background-color: #FAFAFA;
+    margin: auto;
+    padding: 40px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 517px;
+    height: 749px;
+    background-color: rgba(46, 47, 66, 0.4);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-content-box{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    width: 517px;
+    min-height: 749px;
+    background: #FAFAFA;
+    border-radius: 15px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 40px;
+}
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.40);
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+}
