--- a/css/styles.css
+++ b/css/styles.css
@@ -682,33 +682,28 @@ letter-spacing: -0.02em;
                                /*MODAL WINDOW*/
 
 
- .form-content-box{
- width: 517px;
- min-height: 749px;
- background: #FAFAFA;
- border-radius: 15px;
- padding: 40px;
- }
- 
 
  .btn-close-form-review{
+    position: absolute;
+    top: 24px;
+    right: 24px;
     border: none;
-    background-color: #FAFAFA;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    background-color: transparent;
     padding: 0;
-    
- }
- .icon-x-close{
+    line-height: 0;
     stroke: #111;
     stroke-width: 2px;
     stroke-linecap: round;
     stroke-linejoin: round;
- }                              
+    transition: stroke 250ms linear;
+ }
+ .btn-close-form-review:hover,
+ .btn-close-form-review:focus{
+    stroke: #FD9222;
+ }
+                            
 
 .form-review-title{
-color: #111;
     font-size: 24px;
     font-weight: 600;
     line-height: 1.16;
@@ -721,7 +716,7 @@ color: #111;
     color: #FD9222;
 }
 .label-form-review{
-    color: rgba(64, 64, 64, 0.30);
+color: rgba(64, 64, 64, 0.30);
 font-size: 14px;
 font-weight: 400;
 letter-spacing: -0.02em;
@@ -734,7 +729,7 @@ display: block;
 border: 1px solid rgba(17, 17, 17, 0.05); 
 width: 100%;
 height: 68px;
-outline: transparent;
+outline: 0px solid transparent;
 background-color: transparent;
 transition: border 250ms linear;
 padding-left: 62px;
@@ -746,10 +741,8 @@ padding-left: 62px;
 .input-form-review-box{
  position: relative;
 }
-
-
 .icon-input-form{
-   stroke: rgba(64, 64, 64, 1);
+   stroke: #404040;
    fill: none;
    position: absolute;
    left: 24px;
@@ -768,7 +761,7 @@ padding-left: 62px;
     border-radius: 13px;
     border: 1px solid rgba(17, 17, 17, 0.05);
     padding: 22px 24px;
-    outline: transparent;
+    outline: 0px solid transparent;
     background-color: transparent;
     transition: border-color 250ms linear;
 }
@@ -843,33 +836,15 @@ padding-left: 62px;
 .form-review-title-btn-close-box{
     position: relative;
 }
-.btn-close-form-review{
-    position: absolute;
-    top: -17px;
-    right: -17px;
-}
-.form-review-wrapper{
-    border-radius: 15px;
-    background-color: #FAFAFA;
-    margin: auto;
-    padding: 40px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 517px;
-    height: 749px;
-    background-color: rgba(46, 47, 66, 0.4);
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+
 
 .form-content-box{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%) scale(1);
+    transform: translate(-50%, -50%);
     width: 517px;
-    min-height: 749px;
-    background: #FAFAFA;
+    background-color: #FAFAFA;
     border-radius: 15px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 40px;
@@ -878,14 +853,14 @@ padding-left: 62px;
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 999;
+    z-index: 999999;
     width: 100%;
     height: 100%;
-    background-color: rgba(46, 47, 66, 0.40);
+    background-color: rgba(0, 0, 0, 0.50);
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity 250ms linear, visibility 250ms linear;
 }
 
 .backdrop.is-open {
