--- a/css/styles.css
+++ b/css/styles.css
@@ -297,8 +297,6 @@ img {
         }
     }
 }
-
-
 .hero-title{
 color: #FFF;
 font-size: 20px;
@@ -788,6 +786,86 @@ width: 291px;
         gap: 24px;
     }
 }
+/*=======================================REVIEWS============================*/
+.review-title{
+    color: #111;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 1.2;
+    letter-spacing: -0.03em;
+    text-transform: uppercase;
+    margin-bottom: 32px;
+}
+.button-leave-review{
+    color: #111;
+    font-size: 14px;
+    font-weight: 600;
+    border-radius: 100px;
+    border: 1px solid #FD9222;
+    background-color: #fff;
+    padding: 12px 28px;
+    display: block;
+    margin: auto;
+    min-width: 165px;
+    transition: background-color 250ms linear, color 250ms linear;
+}
+.button-leave-review:hover,
+.button-leave-review:focus {
+    background-color: #FD9222;
+    color: #FFF;
+}
+.scroll-block-reviews{
+    display: flex;
+    gap: 13px;
+    justify-content: center;
+    margin-bottom: 32px;
+}
+.icon-scrool-reviews{
+    fill: #fd9222;
+}
+.icon-scroll-elipse-reviews{
+    fill: rgba(17, 17, 17, 0.10);
+}
+
+
+
+
+
+
+
+
+
+
+@media screen and (min-width: 1168px){
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*=============================FOOTER===============================*/
 
 .nav-link-footer-mob{
